--- a/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
+++ b/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
@@ -1,6 +1,7 @@
+<h2>Create a Book</h2>
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Submit</button>
 </form>
- 
+<a href="{% url 'book_list' %}">Back to Book List</a>
