--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -10,6 +10,7 @@
 </div>
 <hr>
 {% empty %}
-<p>No posts available.</p>
+<p>No posts yet.</p>
 {% endfor %}
+<a href="{% url 'post-create' %}">Create New Post</a>
 {% endblock %}
