--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,13 +1,36 @@
 {% extends 'blog/base.html' %}
-
 {% block content %}
 <h2>{{ post.title }}</h2>
 <p>{{ post.content }}</p>
 <p>By {{ post.author.username }} on {{ post.published_date|date:"M d, Y" }}</p>
 
-{% if user == post.author %}
-<a href="{% url 'post-update' post.pk %}">Edit</a>
-<a href="{% url 'post-delete' post.pk %}">Delete</a>
+{% if user.is_authenticated %}
+<a href="{% url 'post-update' post.pk %}">Edit Post</a>
+<a href="{% url 'post-delete' post.pk %}">Delete Post</a>
 {% endif %}
+
+<hr>
+<h3>Comments</h3>
+
+{% for comment in post.comments.all %}
+<div>
+    <p>{{ comment.content }}</p>
+    <small>By {{ comment.author.username }} on {{ comment.created_at|date:"M d, Y H:i" }}</small>
+    {% if user == comment.author %}
+    <a href="{% url 'comment-update' comment.pk %}">Edit</a>
+    <a href="{% url 'comment-delete' comment.pk %}">Delete</a>
+    {% endif %}
+</div>
+<hr>
+{% empty %}
+<p>No comments yet.</p>
+{% endfor %}
+
+{% if user.is_authenticated %}
+<a href="{% url 'comment-create' post.pk %}">Add Comment</a>
+{% else %}
+<p><a href="{% url 'login' %}">Login</a> to comment.</p>
+{% endif %}
+
 <a href="{% url 'post-list' %}">Back to all posts</a>
 {% endblock %}
