--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,7 +1,6 @@
 {% extends 'blog/base.html' %}
-
 {% block content %}
-<h2>All Blog Posts</h2>
+<h2>All Posts</h2>
 {% for post in posts %}
 <div>
     <h3><a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h3>
@@ -10,7 +9,7 @@
 </div>
 <hr>
 {% empty %}
-<p>No posts yet.</p>
+<p>No posts available.</p>
 {% endfor %}
 <a href="{% url 'post-create' %}">Create New Post</a>
 {% endblock %}
