--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,7 +1,11 @@
-<p>Tags:
-{% for tag in post.tags.all %}
-    <a href="{% url 'tagged-posts' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
-{% empty %}
-    No tags
-{% endfor %}
-</p>
+{% extends 'blog/base.html' %}
+{% block content %}
+<h2>{{ post.title }}</h2>
+<p>{{ post.content }}</p>
+<p>By {{ post.author.username }} on {{ post.published_date|date:"M d, Y" }}</p>
+{% if user == post.author %}
+<a href="{% url 'post-update' post.pk %}">Edit</a>
+<a href="{% url 'post-delete' post.pk %}">Delete</a>
+{% endif %}
+<a href="{% url 'post-list' %}">Back to all posts</a>
+{% endblock %}
